<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.wso2.carbon.connector</groupId>
	<artifactId>org.wso2.carbon.connector.gmail</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<name>WSO2 Carbon - Connector Gmail</name>
	<url>http://wso2.org</url>

	<dependencies>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.connector.core</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.synapse</groupId>
			<artifactId>synapse-core</artifactId>
			<version>2.1.1-wso2v7</version>
		</dependency>
		<dependency>
			<groupId>com.google.code</groupId>
			<artifactId>java-gmail-imap</artifactId>
			<version>1.4.4-gm-ext-0.5</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/resources/lib/java-gmail-imap-1.4.4-gm-ext-0.5.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.google.code</groupId>
			<artifactId>samples.oauth2</artifactId>
			<version>1.0.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/resources/lib/samples.oauth2-0.0.1-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.mediation.initializer</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.mediation.library.stub</artifactId>
			<version>${carbon.platform.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.integration.framework</artifactId>
			<version>4.0.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>2.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon.automation</groupId>
			<artifactId>org.wso2.carbon.automation.api</artifactId>
			<version>${test.framework.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon.automation</groupId>
			<artifactId>org.wso2.carbon.automation.core</artifactId>
			<version>${test.framework.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon.automation</groupId>
			<artifactId>org.wso2.carbon.automation.utils</artifactId>
			<version>${test.framework.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>1.1-rc-1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jruby</groupId>
			<artifactId>jruby-complete</artifactId>
			<version>1.3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>emma</groupId>
			<artifactId>emma</artifactId>
			<version>${emma.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.1.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>SecVerifier</artifactId>
			<version>${carbon.platform.version}</version>
			<type>aar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-core</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.geronimo.specs</groupId>
			<artifactId>geronimo-j2ee-management_1.1_spec</artifactId>
			<version>1.0.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.geronimo.specs</groupId>
			<artifactId>geronimo-jms_1.1_spec</artifactId>
			<version>1.1.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi.wso2</groupId>
			<artifactId>hapi</artifactId>
			<version>2.1.0.wso2v1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.wso2.esb</groupId>
			<artifactId>org.wso2.carbon.esb.common</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0</version>
				<configuration>
					<source>1.5</source>
					<target>1.5</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>gmail-library</id>
						<phase>package</phase>
						<goals>
							<goal>attached</goal>
						</goals>
						<configuration>
							<finalName>gmail-connector-1.0.0</finalName>
							<appendAssemblyId>true</appendAssemblyId>
							<filters>
								<filter>${basedir}/src/main/assembly/filter.properties</filter>
							</filters>
							<descriptors>
								<descriptor>src/main/assembly/assemble-connector.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
						<Bundle-Name>${project.artifactId}</Bundle-Name>
						<Export-Package>!javax.servlet,
							!javax.servlet.http,</Export-Package>
						<Import-Package>!javax.xml.soap,
							javax.xml.stream.*;
							version="1.0.1",
							org.apache.axis2.rpc.receivers;
							version="${axis2.osgi.version.range}",
							org.apache.axiom.*;
							version="${axiom.osgi.version.range}",
							org.apache.axis2;
							version="${axis2.osgi.version.range}",
							org.apache.axis2.description;
							version="${axis2.osgi.version.range}",
							org.apache.axis2.engine;
							version="${axis2.osgi.version.range}",
							org.apache.axis2.context;
							version="${axis2.osgi.version.range}",
							org.apache.commons.logging,
							org.apache.synapse,
							org.apache.synapse.config,
							org.apache.synapse.config.xml,
							org.apache.synapse.core,
							org.apache.synapse.core.axis2,
							org.apache.synapse.endpoints.*,
							org.apache.synapse.mediators.base,
							org.apache.synapse.libraries.*,
							org.apache.axis2.transport.base,
							org.wso2.carbon.core,
							org.wso2.carbon.registry.core.service;
							version=1.0.1,
							javax.xml.soap; version=1.0.0,
							*;resolution:=optional</Import-Package>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy</id>
						<phase>generate-test-resources</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>commons-codec</groupId>
									<artifactId>commons-codec</artifactId>
									<version>1.5</version>
									<type>jar</type>
									<overWrite>true</overWrite>
									<outputDirectory>target/connector/dependencies</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>email-library</id>
						<phase>compile</phase>
						<goals>
							<goal>attached</goal>
						</goals>
						<configuration>
							<finalName>gmail</finalName>
							<appendAssemblyId>true</appendAssemblyId>
							<filters>
								<filter>${basedir}/src/main/assembly/filter.properties</filter>
							</filters>
							<descriptors>
								<descriptor>src/main/assembly/assemble-connector.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<inherited>false</inherited>
				<configuration>
					<!-- <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Xmx1024m -XX:PermSize=256m 
						-XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006 
						</argLine> -->
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<disableXmlReport>false</disableXmlReport>
					<parallel>false</parallel>
					<suiteXmlFiles>
						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
					</suiteXmlFiles>
					<systemProperties>
						<property>
							<name>framework.resource.location</name>
							<value>
								${basedir}/src/test/resources/
							</value>
						</property>
						<property>
							<name>server.list</name>
							<value>
								ESB
							</value>
						</property>
						<property>
							<name>usedefaultlisteners</name>
							<value>false</value>
						</property>
						<sec.verifier.dir>${basedir}/target/security-verifier/</sec.verifier.dir>
						<maven.test.haltafterfailure>false</maven.test.haltafterfailure>
						<carbon.zip>
							${basedir}/repository/wso2esb-${esb.version}.zip
						</carbon.zip>
						<emma.home>${basedir}/target/emma</emma.home>
						project.version
						<instr.file>${basedir}/src/test/resources/instrumentation.txt</instr.file>
						<filters.file>${basedir}/src/test/resources/filters.txt</filters.file>
						<emma.output>${basedir}/target/emma</emma.output>
						<property>
							<name>connector_repo</name>
							<value>${basedir}/target</value>
						</property>
					</systemProperties>
					<workingDirectory>${basedir}/target</workingDirectory>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-emma-dependencies</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/emma</outputDirectory>
							<includeTypes>jar</includeTypes>
							<includeArtifactIds>emma,org.wso2.carbon.automation.core
							</includeArtifactIds>
						</configuration>
					</execution>
					<execution>
						<id>copy-jar-dependencies</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/src/test/resources/artifacts/ESB/jar
							</outputDirectory>
							<includeTypes>jar</includeTypes>
							<includeArtifactIds>
								groovy-all,jruby-complete,mysql-connector-java,activemq-core,geronimo-j2ee-management_1.1_spec,geronimo-jms_1.1_spec
							</includeArtifactIds>
							<excludeTransitive>true</excludeTransitive>
						</configuration>
					</execution>
					<execution>
						<id>copy-secVerifier</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/security-verifier</outputDirectory>
							<includeTypes>aar</includeTypes>
							<includeArtifactIds>SecVerifier</includeArtifactIds>
							<stripVersion>true</stripVersion>
						</configuration>
					</execution>
				        <execution>
				            <id>unpack-mar-jks</id>
    				            <phase>compile</phase>
				            <goals>
				                <goal>copy-dependencies</goal>
				            </goals>
				            <configuration>
				                <outputDirectory>${basedir}/target/tobeCopied/</outputDirectory>
				                <resources>
				                    <resource>
				                        <directory>
				                            ${basedir}/target/tobeCopied/wso2esb-${project.version}/repository/samples/resources/security/
				                        </directory>
				                        <includes>
				                            <include>**/*.jks,**/*.mar,**/synapse_sample*.xml</include>
				                        </includes>
				                    </resource>
				                </resources>
				            </configuration>
				        </execution>

				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-resources-jks</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/src/test/resources/keystores/products
							</outputDirectory>
							<resources>
								<resource>
									<directory>
										${basedir}/target/tobeCopied/wso2esb-${esb.version}/repository/resources/security/
									</directory>
									<includes>
										<include>**/*.jks</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-stratos-jks</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/src/test/resources/keystores/stratos
							</outputDirectory>
							<resources>
								<resource>
									<directory>
										${basedir}/target/tobeCopied/wso2esb-${esb.version}/repository/resources/security/
									</directory>
									<includes>
										<include>**/*.jks</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-sample-jks</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/src/test/resources/keystores/products
							</outputDirectory>
							<resources>
								<resource>
									<directory>
										${basedir}/target/tobeCopied/wso2esb-${esb.version}/repository/samples/resources/security/
									</directory>
									<includes>
										<include>**/*.jks</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources-mar</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/src/test/resources/client/modules
							</outputDirectory>
							<resources>
								<resource>
									<directory>
										${basedir}/target/tobeCopied/wso2esb-${esb.version}/repository/deployment/client/modules
									</directory>
									<includes>
										<include>**/*.mar</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-samples</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/src/test/resources/artifacts/ESB/samples/
							</outputDirectory>
							<resources>
								<resource>
									<directory>
										${basedir}/target/tobeCopied/wso2esb-${esb.version}/repository/samples/
									</directory>
									<includes>
										<include>**/*.xml</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<releases>
				<updatePolicy>daily</updatePolicy>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<id>wso2-nexus</id>
			<name>WSO2 internal Repository</name>
			<url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>wso2-maven2-repository</id>
			<name>WSO2 Maven2 Repository</name>
			<url>scp://dist.wso2.org/home/httpd/dist.wso2.org/maven2/</url>
		</repository>
	</distributionManagement>
	<properties>
		<carbon.platform.version>4.2.0</carbon.platform.version>
		<test.framework.version>${carbon.platform.version}</test.framework.version>
		<esb.version>4.8.1</esb.version>
		<emma.version>2.1.5320</emma.version>
	</properties>
</project>
